# interim-food-network

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  config.cfg  database.sqlite
.github/workflows/: rust.yml
migrations/2021-02-19-003450_listings/: down.sql  up.sql
migrations/2021-02-19-231227_listings/: down.sql  up.sql
public/: about.html  create.html  index.html  results.hbs  results.html
src/: main.rs  schema.rs
templates/: results.hbs
