[package]
name = "crls-2021-hackathon"
version = "0.1.0"
authors = ["notrodes <reallystupidid@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rocket_contrib = { version = "0.4.7", features = ["sqlite_pool"] }
sonic-channel = { version = "0.4", features = ["control", "ingest", "search"] }
# rusqlite = "0.24.2"